# user-repo

./: .githook-post-commit  .githook-pre-commit  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  gituser-init-user  gituser-new-repo  svnuser-import-repo  svnuser-init-user  svnuser-new-repo  user-repo-git-users  user-repo-svn-users  user-repo.conf  user-repo.load
debian/: changelog  control  copyright  rules
